# websurf-ai-browser

./: .gitignore  DESIGN_COMPARISON.md  DESIGN_SYSTEM.md  FINAL_FIXES.md  README.md  RELOAD_INSTRUCTIONS.md  TESTING_GUIDE.md  UI_FIXES_SUMMARY.md  UI_UPDATE_SUMMARY.md  captcha_solver.py  example.env  main.py  package-lock.json  package.json  pyproject.toml  scrapper.py
app/: __init__.py  config.py
app/models/: __init__.py
app/routes/: agent_routes.py  auth_routes.py  rag_routes.py
app/schemas/: agent_schema.py  auth_schema.py  response_schema.py
app/services/: agent_service.py  db.py  rag_pipeline.py  rag_service.py
chrome-extension/: README.md  background.js  chat.js  config.js  index.html  manifest.json  options.css  options.html  options.js  sidepanel.css  sidepanel.html  sidepanel.js  styles-temp.css  styles.css  styles.css.backup  utils.js
playwright-mcp/: browser-mcp.js  browser-server.js  package-lock.json  package.json
websurf-backend/app/: app.py
websurf-backend/app/models/: auth_data.py  user_data.py
websurf-backend/app/services/: agent_service.py  auth_service.py  rag_pipeline.py
websurf-build/: .browser-installed  README.md  WebSurf.lnk  build-script.ps1  main-launcher.js  package-lock.json  websurf-script.bat  websurf-script.sh
websurf-build/electron-app/: README.md  auth.js  chat.js  chrome-adapter.js  index.html  main.js  package-lock.json  package.json  preload.js
websurf-mcp/: .deps-installed  browser-mcp.js  browser-server.js  package-lock.json  package.json  test-mcp.py
